[package]
name = "rust-monkey"
version = "0.1.0"
authors = ["Yusuke Tanaka <wing0920@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
whoami = "0.7.0"
anyhow = "1.0.26"
thiserror = "1.0.9"
